adjusted first settings

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,3 +4,12 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
+
+### Configure Deepsleep for 15m
+
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+
+### I've got the power to bluetooth
+
+CONFIG_BT_CTLR_TX_PWR_PULS_8=y
