--- a/.forgejo/workflows/build.yml
+++ b/.forgejo/workflows/build.yml
@@ -2,4 +2,10 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
-    uses: e2mau/zmk/.github/workflows/build-user-config.yml@main
+    runs-on: ubuntu-latest
+    steps:
+      - name: pip_install
+        uses: "/bin/bash apt update && apt install pip3 -y"
+
+      - name: build_firmware
+        uses: e2mau/zmk/.github/workflows/build-user-config.yml@main
