--- a/config/corne.conf
+++ b/config/corne.conf
@@ -10,6 +10,44 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
+### It's a trap for the mouse
+
+CONFIG_ZMK_MOUSE=y
+
 ### I've got the power to bluetooth
 
 CONFIG_BT_CTLR_TX_PWR_PULS_8=y
+
+
+#### Mouse Configure
+
+define U_MOUSE_MOVE_MAX 1400                     /* <--- New max speed setting (default: 600) */
+undef MOVE_UP
+undef MOVE_DOWN
+undef MOVE_LEFT
+undef MOVE_RIGHT
+define MOVE_UP MOVE_VERT(-U_MOUSE_MOVE_MAX)
+define MOVE_DOWN MOVE_VERT(U_MOUSE_MOVE_MAX)
+define MOVE_LEFT MOVE_HOR(-U_MOUSE_MOVE_MAX)
+define MOVE_RIGHT MOVE_HOR(U_MOUSE_MOVE_MAX)
+
+&mmv {
+	time-to-max-speed-ms = <400>;             /* <--- How long time until max speed is reached (default: 500) */
+};
+
+### they see me scrolling' they're hating
+
+define U_MOUSE_SCROLL_MAX 100                    /* <--- New max speed setting (default: 10) */
+
+undef SCROLL_UP
+undef SCROLL_DOWN
+undef SCROLL_LEFT
+undef SCROLL_RIGHT
+define SCROLL_UP SCROLL_VERT(U_MOUSE_SCROLL_MAX)
+define SCROLL_DOWN SCROLL_VERT(-U_MOUSE_SCROLL_MAX)
+define SCROLL_LEFT SCROLL_HOR(-U_MOUSE_SCROLL_MAX)
+define SCROLL_RIGHT SCROLL_HOR(U_MOUSE_SCROLL_MAX)
+
+&mwh {
+  time-to-max-speed-ms = <500>;                 /* <--- How long time until max speed is reached */
+};
