--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,5 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
-    runs-on: ubuntu
-    steps:
-      - name: pip_install
-        uses: "/bin/bash apt update && apt install pip3 -y"
+    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
 
-      - name: build_firmware
-        uses: e2mau/zmk/.github/workflows/build-user-config.yml@main
