--- a/config/corne.conf
+++ b/config/corne.conf
@@ -16,7 +16,7 @@ CONFIG_ZMK_MOUSE=y
 
 ### I've got the power to bluetooth
 
-CONFIG_BT_CTLR_TX_PWR_PULS_8=y
+#CONFIG_BT_CTLR_TX_PWR_PULS_8=y
 
 
 #### Mouse Configure
