--- a/config/corne.conf
+++ b/config/corne.conf
@@ -7,17 +7,24 @@ CONFIG_ZMK_DISPLAY=y
 
 ### Configure Deepsleep for 15m
 
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+#CONFIG_ZMK_SLEEP=y
+#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+
+# Uncomment the following line to enable deep sleep
+# CONFIG_ZMK_SLEEP=y
+
+# Uncomment the following line to increase the keyboard's wireless range
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Enable eager debouncing
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 
 ### It's a trap for the mouse
 
 CONFIG_ZMK_MOUSE=y
 
 ### I've got the power to bluetooth
-
-#CONFIG_BT_CTLR_TX_PWR_PULS_8=y
-
 
 #### Mouse Configure
 
